fixed sidebar spacing for buttons on smaller screen

--- a/frontend/src/styles/sidebar.css
+++ b/frontend/src/styles/sidebar.css
@@ -10,7 +10,7 @@
 
 .logo {
     margin-top: 10px;
-    margin-bottom: 7vh;
+    margin-bottom: 1vh;
     width: 100%;
     height: 160px;
 }
